--- a/OPSI/control
+++ b/OPSI/control
@@ -66,9 +66,9 @@ default: ["none"]
 [Changelog]
 dfn_inkscape (0.91-1)
 	* initiales DFN-Paket
-	* MSI legt defaultmäßig ein Desktopicon an, ggf. entfernen
-	* MSI speichert InstallDir nicht ab -> manuell pflegen
- -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 11.08.2015
+	* angepasstes MSI-Paket, das kein Desktopicon anlegt
+	* MSI speichert 'InstallLocation' nicht ab bzw. 'DisplayIcon' fehlt -> manuell in Registry schreiben
+ -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 12.08.2015
 
 
 
