--- a/OPSI/control
+++ b/OPSI/control
@@ -1,5 +1,5 @@
 [Package]
-version: 1
+version: 2
 depends: 
 incremental: False
 
@@ -64,11 +64,20 @@ values: ["none", "post-deinstall.opsiinc"]
 default: ["none"]
 
 [Changelog]
+dfn_inkscape (0.91-2)
+	* Copy&Paste-Überbleibsel entfernt ;-)
+	* Bugfix "InstallLocation" bzw. "DisplayIcon" an die richtige Stelle in Registry schreiben
+	* Icon hinzugefügt
+-- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 13.08.2015
+
 dfn_inkscape (0.91-1)
 	* initiales DFN-Paket
 	* angepasstes MSI-Paket, das kein Desktopicon anlegt
 	* MSI speichert 'InstallLocation' nicht ab bzw. 'DisplayIcon' fehlt -> manuell in Registry schreiben
  -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 12.08.2015
+
+
+
 
 
 
