--- a/OPSI/control
+++ b/OPSI/control
@@ -1,7 +1,6 @@
 [Package]
-version: 1
+version: 2
 depends: 
-incremental: False
 
 [Product]
 type: localboot
@@ -61,7 +60,14 @@ values: ["/qb!", "/qn"]
 default: ["/qb!"]
 
 [Changelog]
-dfn_inkscape (0.92.2-1)
+dfn_inkscape (0.92.3-2)
+	* neues o4i-Logo
+	* neue Registrysuche (https://github.com/opsi4instituts/lib, winst-Version 4.12.0.16 Voraussetzung)
+	* Verwendung uib_exitcode (local function)
+	* Check Version (Paket <-> Installation)
+-- David Dams (archIT/KIT) <david.dams9@kit.edu>, 07.01.2019
+
+dfn_inkscape (0.92.3-1)
 	* neue Upstreamversion (http://wiki.inkscape.org/wiki/index.php/Release_notes/0.92.3)
 	* o4i-Kosmetik (desktoplink -> desktop-link, msi-silent-option -> silent-option)
  -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 26.03.2018
